=head1 Revision history for Config-Param

=over 2

=item * B<3.000007> (2012-07-28)

Consistent indent for value in single-parameter help.

=item * B<3.000006> (2012-07-27)

Fixing construction mode of parse_file to really behave as if accept_unknown had been specified (incomplete conditional). This fixes construction from files without full meta data.

Also, documentation got further refinement.

=item * B<3.000005> (2012-07-21)

=over 2

=item - Require Perl 5.8.0 as reliable base for main work and tests.

=item - Require some modules explicitly.

=item - Update POD of paramorama (and add TODO about fully automating that).

=back

=item * B<3.000004> (2012-07-21)

Include parameter types in POD output.

=item * B<3.000003> (2012-07-20)

Some documentation fixes of varying substance.

=item * B<3.000002> (2012-07-20)

And another release without functional changes, cleanup up the documentation and putting the plain text files also into POD format. Nicer lookin on da CPAN web, innit so?

=item * B<3.000001> (2012-07-20)

Whoo! Already an update! Well, it's just a version bump because the first PAUSE upload did not work.

=item * B<3.000000> (2012-07-20)

=over 2

=item - Finally putting things on CPAN after prettifying the code and API cleanup (including the obligatory OO interface).

=item - Some features got added, of course:

=over 2

=item - support for hashes

=item - noexit, output, linewidth, silenterr config entries

=back

=item - Others got removed:

=over 2

=item - automatic eval() of files

=item - ignorehelp config switch (just use nofinals)

=back

=item - Behavioural changes:

=over 2

=item - multliline values don't get a line end appended unless there is an empty line before the end marker. Before, it was not possible to enter values that don't end with a line end.

=item - --config is an array now, as well as optionally the file config entry

=back

=item	- Heck, stuff is tested meanwhile!

=back
