@@ -35,7 +35,7 @@
    "provides" : {
       "Config::Param" : {
          "file" : "lib/Config/Param.pm",
-         "version" : "3.000007"
+         "version" : "3.000008"
       },
       "Config::Param::FileWorker" : {
          "file" : "lib/Config/Param/FileWorker.pm",
@@ -48,5 +48,5 @@
          "http://dev.perl.org/licenses/"
       ]
    },
-   "version" : "3.000007"
+   "version" : "3.000008"
 }
